--- a/src/Resources/views/Collector/sms.html.twig
+++ b/src/Resources/views/Collector/sms.html.twig
@@ -1,24 +1,26 @@
 {% extends '@WebProfiler/Profiler/layout.html.twig' %}
 
 {% block toolbar %}
-    {% set icon %}
-        {# this is the content displayed as a panel in the toolbar #}
-        <span class="icon">{{ include('@LitGroupSms/Collector/icon.svg') }}</span>
-        <span class="sf-toolbar-value">{{ collector.messageCount }}</span>
-    {% endset %}
+    {% if collector.messageCount %}
+        {% set icon %}
+            {# this is the content displayed as a panel in the toolbar #}
+            <span class="icon">{{ include('@LitGroupSms/Collector/icon.svg') }}</span>
+            <span class="sf-toolbar-value">{{ collector.messageCount }}</span>
+        {% endset %}
 
-    {% set text %}
-        {# this is the content displayed when hovering the mouse over
-           the toolbar panel #}
-        <div class="sf-toolbar-info-piece">
-            <b>Sent messages</b>
-            <span class="sf-toolbar-status">{{ collector.messageCount }}</span>
-        </div>
-    {% endset %}
+        {% set text %}
+            {# this is the content displayed when hovering the mouse over
+               the toolbar panel #}
+            <div class="sf-toolbar-info-piece">
+                <b>Sent messages</b>
+                <span class="sf-toolbar-status">{{ collector.messageCount }}</span>
+            </div>
+        {% endset %}
 
-    {# the 'link' value set to 'false' means that this panel doesn't
-       show a section in the web profiler (default is 'true'). #}
-    {{ include('@WebProfiler/Profiler/toolbar_item.html.twig', { link: true }) }}
+        {# the 'link' value set to 'false' means that this panel doesn't
+           show a section in the web profiler (default is 'true'). #}
+        {{ include('@WebProfiler/Profiler/toolbar_item.html.twig', { link: true }) }}
+    {% endif %}
 {% endblock %}
 
 {% block head %}
